Custom domains are dead at Fathom

--- a/_layouts/proxima/default.html
+++ b/_layouts/proxima/default.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="/css/proxima.css" type="text/css" />
 	<link rel="alternate" href="http://warpspire.com/feed/" type="application/rss+xml" />
   
-  <script src="https://frankly-shankly-right.warpspire.com/script.js" data-site="ASWRNHKL" defer></script>
+  <script src="https://cdn.usefathom.com/script.js" data-site="ASWRNHKL" defer></script>
 </head>
 <body>
 
